// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChannelSliders > HSL mode > renders correctly 1`] = `
<div
  class="flex flex-col gap-3"
  data-testid="ChannelSliders"
>
  <div
    class="flex items-center gap-2"
    data-testid="HueSlider"
  >
    H
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, rgb(255, 0, 0), rgb(255, 255, 0), rgb(0, 255, 0), rgb(0, 255, 255), rgb(0, 0, 255), rgb(255, 0, 255), rgb(255, 0, 0)); touch-action: none;"
    >
      <div
        aria-label="Hue"
        aria-orientation="horizontal"
        aria-valuemax="359.9"
        aria-valuemin="0"
        aria-valuenow="209.59"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(58.236% - 11.647px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Hue"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="210"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        °
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="SaturationSlider"
  >
    S
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, rgb(109, 109, 109), rgb(0, 110, 217)); touch-action: none;"
    >
      <div
        aria-label="Saturation"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(100% - 20px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Saturation"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="100"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="LightnessSlider"
  >
    L
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 129, 255), rgb(255, 255, 255)); touch-action: none;"
    >
      <div
        aria-label="Lightness"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="42.55"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(42.55% - 8.51px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Lightness"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="43"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`ChannelSliders > OKLCH mode > renders correctly 1`] = `
<div
  class="flex flex-col gap-3"
  data-testid="ChannelSliders"
>
  <div
    class="flex items-center gap-2"
    data-testid="LightnessSlider"
  >
    L
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, oklch(0 0.194 250), oklch(0.54 0.194 250), oklch(1 0.194 250)); touch-action: none;"
    >
      <div
        aria-label="Lightness"
        aria-orientation="horizontal"
        aria-valuemax="1"
        aria-valuemin="0"
        aria-valuenow="0.54"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(54% - 10.8px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Lightness"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="54.0"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        %
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="ChromaSlider"
  >
    C
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, oklch(0.54 0 250), oklch(0.54 0.19733 250)); touch-action: none;"
    >
      <div
        aria-label="Chroma"
        aria-orientation="horizontal"
        aria-valuemax="0.19733"
        aria-valuemin="0"
        aria-valuenow="0.194"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(98.312% - 19.662px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Chroma"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="0.194"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="HueSlider"
  >
    H
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, oklch(0.7 0.4 0), oklch(0.7 0.4 60), oklch(0.7 0.4 120), oklch(0.7 0.4 180), oklch(0.7 0.4 240), oklch(0.7 0.4 300), oklch(0.7 0.4 0)); touch-action: none;"
    >
      <div
        aria-label="Hue"
        aria-orientation="horizontal"
        aria-valuemax="360"
        aria-valuemin="0"
        aria-valuenow="250"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(69.444% - 13.889px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Hue"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="250.0"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
      >
        °
      </span>
    </div>
  </div>
</div>
`;

exports[`ChannelSliders > RGB mode > renders correctly 1`] = `
<div
  class="flex flex-col gap-3"
  data-testid="ChannelSliders"
>
  <div
    class="flex items-center gap-2"
    data-testid="RedSlider"
  >
    R
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(255, 0, 0)); touch-action: none;"
    >
      <div
        aria-label="Red"
        aria-orientation="horizontal"
        aria-valuemax="255"
        aria-valuemin="0"
        aria-valuenow="0"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(0% - 0px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Red"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="0"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="GreenSlider"
  >
    G
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 255, 0)); touch-action: none;"
    >
      <div
        aria-label="Green"
        aria-orientation="horizontal"
        aria-valuemax="255"
        aria-valuemin="0"
        aria-valuenow="110"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(43.137% - 8.627px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Green"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="110"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
    data-testid="BlueSlider"
  >
    B
    <div
      class="relative h-3 w-full rounded-full cursor-pointer aria-disabled:cursor-not-allowed aria-disabled:opacity-50"
      style="background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 255)); touch-action: none;"
    >
      <div
        aria-label="Blue"
        aria-orientation="horizontal"
        aria-valuemax="255"
        aria-valuemin="0"
        aria-valuenow="217"
        class="pointer-events-none absolute top-1/2 size-5 -translate-y-1/2 rounded-full border-2 border-black dark:border-white bg-white dark:bg-black shadow-md transition-transform focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-black dark:focus-visible:ring-white"
        role="slider"
        style="left: calc(85.098% - 17.02px);"
        tabindex="0"
      />
    </div>
    <div
      class="flex items-center"
      data-testid="NumericInput"
    >
      <input
        aria-label="Blue"
        class="w-11 bg-black/10 dark:bg-white/10 text-right text-sm text-black/75 dark:text-white/75 outline-none focus:ring-1 focus:ring-black/20 dark:focus:ring-white/20 rounded px-0.5"
        type="text"
        value="217"
      />
      <span
        class="w-2 text-xs text-neutral-500 dark:text-neutral-400"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
</div>
`;
